<resources>
    <string name="app_name">Practica2OrtFer</string>
    <string name="titol">Practica2OrtFer</string>
    <string name="subtitolActMain">News Online</string>
    <string name="btnScience">SCIENCE</string>
    <string name="btnTechnology">TECHNOLOGY</string>
    <string name="btnHealth">HEALTH</string>
    <string name="subtitolScience">Motivos de porque comer Ben and Jerry\'s</string>
    <string name="text_articleScience">Ben and Jerry\'s ta bueno y es SCIENCE.\nLo recomiendo porque tienen helado <b>vegano</b> los precios son caretes <i> pero ta bueno</i> https://www.ben-jerrys.es/sabores
    \nEn 1977, los amigos de toda la vida, ex-hippies, Ben Cohen y Jerry Greenfield completaron un curso por correspondencia sobre hacer helado desde la Universidad Estatal de Pensilvania. El 5 de mayo de 1978, con $ 12,000 de inversión de la pareja abrió una heladería en una gasolinera renovada en el centro de la ciudad de Burlington, Vermont. En 1979, marcaron el aniversario mediante la celebración de la primera jornada de first-ever free cone day (día de cono gratis), ahora una celebración anual a nivel nacional.
Los fundadores fueron capaces de combinar el helado con el activismo social mediante la creación de la Misión Estatal en tres-partes que considera a los beneficios como una medida de éxito. Trisección por su grado de éxito en una misión de productos, una misión económica y una misión social, fueron capaces de diferenciarse de compañías de tamaño similar de alimentos, y generar la atención nacional en sus esfuerzos.
        \nEn 1980, Ben y Jerry alquilaron un espacio en un molino en el sur Champlain Street en Burlington y comenzaron a comercializar sus helados en botes de 1 pinta. En 1981, la primera franquicia de Ben and Jerry's abrió en la Ruta 7 en Shelburne, Vermont. En 1983, su helado se usó para construir «el helado más grande del mundo» en St. Albans, Vermont, el helado pesa 27.102 libras. En 1984, Häagen-Dazs trató de limitar su distribución en Boston, lo que los llevó a presentar una demanda contra la empresa matriz, Pillsbury, en su campaña ya famoso «¿Cuál es el miedo de Doughboy?». En 1987, Häagen-Dazs de nuevo trató de aplicar la distribución exclusiva, y Ben and Jerry's presentó su segunda demanda contra la empresa Pillsbury</string>
    <string name="subtitolTech">Ventajas tecnologia</string>
    <string name="text_articleTech">Ben and Jerry\'s ta bueno y es TECNOLOGIC.\nLo recomiendo porque tienen helado <b>vegano</b> los precios son caretes <i> pero ta bueno</i> https://www.ben-jerrys.es/sabores
    \nEn 1977, los amigos de toda la vida, ex-hippies, Ben Cohen y Jerry Greenfield completaron un curso por correspondencia sobre hacer helado desde la Universidad Estatal de Pensilvania. El 5 de mayo de 1978, con $ 12,000 de inversión de la pareja abrió una heladería en una gasolinera renovada en el centro de la ciudad de Burlington, Vermont. En 1979, marcaron el aniversario mediante la celebración de la primera jornada de first-ever free cone day (día de cono gratis), ahora una celebración anual a nivel nacional.
Los fundadores fueron capaces de combinar el helado con el activismo social mediante la creación de la Misión Estatal en tres-partes que considera a los beneficios como una medida de éxito. Trisección por su grado de éxito en una misión de productos, una misión económica y una misión social, fueron capaces de diferenciarse de compañías de tamaño similar de alimentos, y generar la atención nacional en sus esfuerzos.
        \nEn 1980, Ben y Jerry alquilaron un espacio en un molino en el sur Champlain Street en Burlington y comenzaron a comercializar sus helados en botes de 1 pinta. En 1981, la primera franquicia de Ben and Jerry's abrió en la Ruta 7 en Shelburne, Vermont. En 1983, su helado se usó para construir «el helado más grande del mundo» en St. Albans, Vermont, el helado pesa 27.102 libras. En 1984, Häagen-Dazs trató de limitar su distribución en Boston, lo que los llevó a presentar una demanda contra la empresa matriz, Pillsbury, en su campaña ya famoso «¿Cuál es el miedo de Doughboy?». En 1987, Häagen-Dazs de nuevo trató de aplicar la distribución exclusiva, y Ben and Jerry's presentó su segunda demanda contra la empresa Pillsbury</string>
    <string name="subtitolHealth">Es sano el ben y jerris</string>
    <string name="text_articleHealth">Ben and Jerry\'s ta bueno y es HEALTHY.\nLo recomiendo porque tienen helado <b>vegano</b> los precios son caretes <i> pero ta bueno</i> https://www.ben-jerrys.es/sabores
    \nEn 1977, los amigos de toda la vida, ex-hippies, Ben Cohen y Jerry Greenfield completaron un curso por correspondencia sobre hacer helado desde la Universidad Estatal de Pensilvania. El 5 de mayo de 1978, con $ 12,000 de inversión de la pareja abrió una heladería en una gasolinera renovada en el centro de la ciudad de Burlington, Vermont. En 1979, marcaron el aniversario mediante la celebración de la primera jornada de first-ever free cone day (día de cono gratis), ahora una celebración anual a nivel nacional.
Los fundadores fueron capaces de combinar el helado con el activismo social mediante la creación de la Misión Estatal en tres-partes que considera a los beneficios como una medida de éxito. Trisección por su grado de éxito en una misión de productos, una misión económica y una misión social, fueron capaces de diferenciarse de compañías de tamaño similar de alimentos, y generar la atención nacional en sus esfuerzos.
        \nEn 1980, Ben y Jerry alquilaron un espacio en un molino en el sur Champlain Street en Burlington y comenzaron a comercializar sus helados en botes de 1 pinta. En 1981, la primera franquicia de Ben and Jerry's abrió en la Ruta 7 en Shelburne, Vermont. En 1983, su helado se usó para construir «el helado más grande del mundo» en St. Albans, Vermont, el helado pesa 27.102 libras. En 1984, Häagen-Dazs trató de limitar su distribución en Boston, lo que los llevó a presentar una demanda contra la empresa matriz, Pillsbury, en su campaña ya famoso «¿Cuál es el miedo de Doughboy?». En 1987, Häagen-Dazs de nuevo trató de aplicar la distribución exclusiva, y Ben and Jerry's presentó su segunda demanda contra la empresa Pillsbury</string>
    <string name="urlTxt">Introduce la URL</string>
    <string name="getURL"></string>
</resources>