<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/titol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="@dimen/padding_regular"
        android:text="@string/titol"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titol"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="139dp"
        android:padding="@dimen/padding_regular"
        android:text="@string/subtitolActMain"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitol"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:onClick="pressScience"
        android:text="@string/btnScience" />
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnTechnology"
        android:onClick="pressTechnology"
        android:layout_below="@id/button1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:onClick="pressHealth"
        android:text="@string/btnHealth" />

    <TextView
        android:id="@+id/txtViewUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/button3"
        android:padding="@dimen/padding_regular"
        android:text="@string/urlTxt" />

    <EditText
        android:id="@+id/editTxtUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/txtViewUrl"
        android:padding="@dimen/padding_regular" />
    <Button
        android:id="@+id/buttonUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/editTxtUrl"
        android:padding="@dimen/padding_regular"
        android:onClick="pressURL"/>

</RelativeLayout>