<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:padding="@dimen/padding_regular"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:text="@string/titol"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titol">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/subtitol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titol"
                android:padding="@dimen/padding_regular"
                android:text="@string/subtitolScience"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitol"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/text_articleScience" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
